--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -9,6 +9,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.10.4
+        architecture: "x64"
     - name: Install dependencies
       run: |
         make install
