--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -14,6 +14,7 @@ jobs:
       run: |
         make install
         python -m textblob.download_corpora
+        pip3 install httpx
     - name: Lint with pylint
       run: |
         make lint
